add cell style at the end of all notebooks

--- a/python/session-2016-03-idf/5_calcul/theorie/matplotlib.ipynb
+++ b/python/session-2016-03-idf/5_calcul/theorie/matplotlib.ipynb
@@ -11,8 +11,7 @@
     }
    },
    "source": [
-    "# Formation Python\n",
-    "# *Représentation graphique avec Matplotlib*"
+    "# Formation Python - *Représentation graphique avec Matplotlib*"
    ]
   },
   {
@@ -56,7 +55,7 @@
     }
    },
    "source": [
-    "### Utilisation de matplotlib dans un notebook"
+    "## Utilisation de matplotlib dans un notebook"
    ]
   },
   {
@@ -83,7 +82,7 @@
     }
    },
    "source": [
-    "### pyplot et pylab\n",
+    "## pyplot et pylab\n",
     "\n",
     "pyplot est le module de matplotlib qui contient toutes les fonctionnalités permettant de faire des graphes"
    ]
@@ -182,7 +181,7 @@
     }
    },
    "source": [
-    "### Notre modèle\n",
+    "## Notre modèle\n",
     "\n",
     "Dans la suite, nous allons nous appuyer sur l'équation écrite en coordonnées polaires suivante\n",
     "\n",
@@ -335,7 +334,7 @@
     }
    },
    "source": [
-    "### Ajouter un titre et des labels"
+    "## Ajouter un titre et des labels"
    ]
   },
   {
@@ -375,7 +374,7 @@
     }
    },
    "source": [
-    "### Jouer avec les axes\n",
+    "## Jouer avec les axes\n",
     "\n",
     "Il est possible de définir les valeurs devant figurer sur l'axe ainsi que leur format en utilisant `xticks` ou `yticks`."
    ]
@@ -580,7 +579,7 @@
     }
    },
    "source": [
-    "### Colorier une partie de la figure"
+    "## Colorier une partie de la figure"
    ]
   },
   {
@@ -651,7 +650,7 @@
     }
    },
    "source": [
-    "### Annotations"
+    "## Annotations"
    ]
   },
   {
@@ -725,7 +724,7 @@
     }
    },
    "source": [
-    "### subplot et axes\n",
+    "## subplot et axes\n",
     "\n",
     "Il n'est pas rare d'avoir besoin d'afficher plusieurs figures indépendantes sur une même figure.\n",
     "`matplotlib` offre deux façons de faire: `subplot` ou `axes`."
@@ -853,7 +852,7 @@
     }
    },
    "source": [
-    "### Ajouter une légende"
+    "## Ajouter une légende"
    ]
   },
   {
@@ -903,7 +902,7 @@
     }
    },
    "source": [
-    "### Autres figures"
+    "## Autres figures"
    ]
   },
   {
@@ -1026,7 +1025,7 @@
     }
    },
    "source": [
-    "### Animations\n",
+    "## Animations\n",
     "\n",
     "Il est également possible de faire des films rapidement en donnant la fonction qui fait la mise à jour, en spécifiant le nombre de frames par seconde, ..."
    ]
@@ -1819,6 +1818,124 @@
     "    interval=25, blit=True, init_func=init)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "\n",
+       "h1, h2, h3, h4, h5 {\n",
+       "    font-family: 'Alegreya Sans', sans-serif;\n",
+       "}\n",
+       "\n",
+       "div.text_cell_render{\n",
+       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "    line-height: 135%;\n",
+       "    font-size: 120%;\n",
+       "    width:100%;/*600px;*/\n",
+       "    /*margin-left:auto;*/\n",
+       "    /*margin-right:auto;*/\n",
+       "}\n",
+       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
+       "\n",
+       "/* header colours and fonts */\n",
+       ".rendered_html h1 {\n",
+       "    color:#9A3334;\n",
+       "    /*margin-top: 0.5em;*/\n",
+       "    padding: 1em;\n",
+       "    display: block;\n",
+       "    font-size: 40px;\n",
+       "    text-align: center;\n",
+       "    border-top: 2px solid #9A3334;\n",
+       "    border-bottom: 2px solid #9A3334;\n",
+       "}\n",
+       "\n",
+       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
+       ".rendered_html h2 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-style: italic;\n",
+       "    font-weight: normal;\n",
+       "    font-size: 30px;\n",
+       "    /*text-align: center;*/\n",
+       "    border-bottom: 1px solid #9A3334;\n",
+       "}\n",
+       ".rendered_html h3 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-weight: normal;\n",
+       "    font-size: 25px;\n",
+       "    font-style: italic;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h4 {\n",
+       "    border: 2px solid #9A3334;\n",
+       "    border-radius: 25px;\n",
+       "    font-style: italic;\n",
+       "    height:5%;\n",
+       "    width:15%;\n",
+       "    padding:5px;\n",
+       "    text-align: center;\n",
+       "}\n",
+       "\n",
+       "div.prompt {\n",
+       "    display: None;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".ui-wrapper {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".video {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       ".rendered_html img {\n",
+       "    margin-top: 0em;\n",
+       "}\n",
+       "\n",
+       "div.input_area {\n",
+       "    border-radius: 10px;\n",
+       "}\n",
+       "\n",
+       "/*.reveal h1 {\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}*/\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# execute this part to modify the css style\n",
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
    ]
   }
  ],
