--- a/python/session-2016-03-idf/1_fonctions/ellipsoides/enonce/synope_session_2016_03_idf-TP1.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/ellipsoides/enonce/synope_session_2016_03_idf-TP1.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -253,9 +253,10 @@
        "/* header colours and fonts */\n",
        ".rendered_html h1 {\n",
        "    color:#9A3334;\n",
-       "    margin-top: 0.5em;\n",
+       "    /*margin-top: 0.5em;*/\n",
+       "    padding: 1em;\n",
        "    display: block;\n",
-       "    font-size: 400%;\n",
+       "    font-size: 40px;\n",
        "    text-align: center;\n",
        "    border-top: 2px solid #9A3334;\n",
        "    border-bottom: 2px solid #9A3334;\n",
@@ -269,7 +270,7 @@
        "    font-weight: normal;\n",
        "    font-size: 30px;\n",
        "    /*text-align: center;*/\n",
-       "    border-bottom: 2px solid #9A3334;\n",
+       "    border-bottom: 1px solid #9A3334;\n",
        "}\n",
        ".rendered_html h3 {\n",
        "    color: #9A3334;\n",
@@ -322,7 +323,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +332,7 @@
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
-    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    styles = open(\"../../../styles/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
     "css_styling()"
    ]
@@ -339,21 +340,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
