--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_1_style.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_1_style.ipynb
@@ -62,7 +62,7 @@
     }
    },
    "source": [
-    "## PEP 8 : Fichiers\n",
+    "### PEP 8 : Fichiers\n",
     "\n",
     "- indentation **4** espaces\n",
     "- pas de tabulation"
@@ -76,7 +76,7 @@
     }
    },
    "source": [
-    "## PEP 8 : Lignes (1/2)\n",
+    "### PEP 8 : Lignes (1/2)\n",
     "    \n",
     "- **79** caractères par ligne (largeur par défaut d'un terminal)\n",
     "    + 119 en django (largeur de l'affichage sur github)\n",
@@ -130,7 +130,7 @@
     }
    },
    "source": [
-    "## PEP 8 : Lignes (2/2)\n",
+    "### PEP 8 : Lignes (2/2)\n",
     "\n",
     "Pour les fonctions, on \n",
     "```python\n",
@@ -148,7 +148,7 @@
     }
    },
    "source": [
-    "## PEP 8 : Noms de variables (1/2)\n",
+    "### PEP 8 : Noms de variables (1/2)\n",
     "\n",
     "- Pour les modules, variables, fonctions et méthodes :\n",
     "    + snake_case : lettres minuscules + underscores\n",
@@ -193,7 +193,7 @@
     }
    },
    "source": [
-    "## PEP 8 : Noms de variables (2/2)\n",
+    "### PEP 8 : Noms de variables (2/2)\n",
     "\n",
     "- Pour les constantes\n",
     "    + SCREAMING_SNAKE_CASE: majuscules et underscores\n",
@@ -212,7 +212,7 @@
     }
    },
    "source": [
-    "## PEP 8 : Les espaces\n",
+    "### PEP 8 : Les espaces\n",
     "\n",
     "- on met des espaces autour des opérateurs (=, ==, <, >, +, ...)\n",
     "    - sauf pour les passages de paramètres\n",
@@ -242,7 +242,7 @@
     }
    },
    "source": [
-    "## PEP 8: Les imports\n",
+    "### PEP 8: Les imports\n",
     "\n",
     "- on ne doit faire qu'un import par ligne\n",
     "- on ordonne les imports et on sépare les groupe d'une ligne\n",
@@ -269,7 +269,7 @@
     }
    },
    "source": [
-    "# Vérifier le respect de PEP 8 : [pylint](https://www.pylint.org/)\n",
+    " ## Vérifier le respect de PEP 8 : [pylint](https://www.pylint.org/)\n",
     "\n",
     "- pylint est un outil qui permet de vérifier qu'un code respecte la convention du PEP 8\n",
     "    + il est intégré dans de nombreuses IDE qui montrent les erreurs en temps réel\n",
@@ -295,13 +295,131 @@
     }
    },
    "source": [
-    "## utiliser pylint\n",
+    "### utiliser pylint\n",
     "\n",
     "```python\n",
     "pylint mon_programme.py\n",
     "```\n",
     "\n",
     "- Pylint en général n'affichera pas le problème mais un code d'erreur qui peut être vérifié à cette [adresse](http://pylint-messages.wikidot.com/all-codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "\n",
+       "h1, h2, h3, h4, h5 {\n",
+       "    font-family: 'Alegreya Sans', sans-serif;\n",
+       "}\n",
+       "\n",
+       "div.text_cell_render{\n",
+       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "    line-height: 135%;\n",
+       "    font-size: 120%;\n",
+       "    width:100%;/*600px;*/\n",
+       "    /*margin-left:auto;*/\n",
+       "    /*margin-right:auto;*/\n",
+       "}\n",
+       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
+       "\n",
+       "/* header colours and fonts */\n",
+       ".rendered_html h1 {\n",
+       "    color:#9A3334;\n",
+       "    /*margin-top: 0.5em;*/\n",
+       "    padding: 1em;\n",
+       "    display: block;\n",
+       "    font-size: 40px;\n",
+       "    text-align: center;\n",
+       "    border-top: 2px solid #9A3334;\n",
+       "    border-bottom: 2px solid #9A3334;\n",
+       "}\n",
+       "\n",
+       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
+       ".rendered_html h2 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-style: italic;\n",
+       "    font-weight: normal;\n",
+       "    font-size: 30px;\n",
+       "    /*text-align: center;*/\n",
+       "    border-bottom: 1px solid #9A3334;\n",
+       "}\n",
+       ".rendered_html h3 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-weight: normal;\n",
+       "    font-size: 25px;\n",
+       "    font-style: italic;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h4 {\n",
+       "    border: 2px solid #9A3334;\n",
+       "    border-radius: 25px;\n",
+       "    font-style: italic;\n",
+       "    height:5%;\n",
+       "    width:15%;\n",
+       "    padding:5px;\n",
+       "    text-align: center;\n",
+       "}\n",
+       "\n",
+       "div.prompt {\n",
+       "    display: None;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".ui-wrapper {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".video {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       ".rendered_html img {\n",
+       "    margin-top: 0em;\n",
+       "}\n",
+       "\n",
+       "div.input_area {\n",
+       "    border-radius: 10px;\n",
+       "}\n",
+       "\n",
+       "/*.reveal h1 {\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}*/\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# execute this part to modify the css style\n",
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
    ]
   }
  ],
@@ -322,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
