--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_2_tests.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_2_tests.ipynb
@@ -59,7 +59,7 @@
     }
    },
    "source": [
-    "# Les types de tests"
+    "## Les types de tests"
    ]
   },
   {
@@ -83,7 +83,7 @@
     }
    },
    "source": [
-    "## Tests unitaires : niveau 0\n",
+    "### Tests unitaires : niveau 0\n",
     "\n",
     "Le but est de tester chaque petit bout de code : fonctions, méthodes, ...\n",
     "   \n",
@@ -102,7 +102,7 @@
     }
    },
    "source": [
-    "## Tests d'intégration : niveau 1\n",
+    "### Tests d'intégration : niveau 1\n",
     "\n",
     "Le but est de commencer à tester de petites interactions entre les différentes unités du programme.\n",
     "\n",
@@ -121,7 +121,7 @@
     }
    },
    "source": [
-    "## Tests du système : niveau 2\n",
+    "### Tests du système : niveau 2\n",
     "\n",
     "Le but est de tester le programme dans sa globalité.\n",
     "\n",
@@ -153,7 +153,7 @@
     }
    },
    "source": [
-    "# Notre cas d'étude"
+    "## Notre cas d'étude"
    ]
   },
   {
@@ -296,7 +296,7 @@
     }
    },
    "source": [
-    "# Les outils de tests en Python"
+    "## Les outils de tests en Python"
    ]
   },
   {
@@ -318,7 +318,7 @@
     }
    },
    "source": [
-    "# doctest"
+    "## doctest"
    ]
   },
   {
@@ -407,7 +407,7 @@
     }
    },
    "source": [
-    "## Les directives\n",
+    "### Les directives\n",
     "\n",
     "Il est possible d'ajouter des directives dans le texte permettant de ne pas faire le test, d'indiquer juste une partie de la sortie, ...\n",
     "\n"
@@ -455,7 +455,7 @@
     }
    },
    "source": [
-    "# unittest"
+    "## unittest"
    ]
   },
   {
@@ -550,7 +550,7 @@
     }
    },
    "source": [
-    "## Les assertions\n",
+    "### Les assertions\n",
     "\n",
     "Ils permettent de dire à **unittest** ce que l'on attend comme résultat du test.\n",
     "\n",
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rassembler les tests"
+    "### Rassembler les tests"
    ]
   },
   {
@@ -657,7 +657,7 @@
     }
    },
    "source": [
-    "# nosetests"
+    "## nosetests"
    ]
   },
   {
@@ -728,7 +728,7 @@
     }
    },
    "source": [
-    "## Ecriture de tests avec nosetests\n",
+    "### Ecriture de tests avec nosetests\n",
     "\n",
     "**nosetests** considère qu'un fichier, un répertoire contient des tests si celui-ci satisfait l'expression régulière que l'on appellera dans la suite *matchTest*\n",
     "\n",
@@ -749,7 +749,7 @@
     }
    },
    "source": [
-    "## Exemples"
+    "### Exemples"
    ]
   },
   {
@@ -795,7 +795,7 @@
     }
    },
    "source": [
-    "## Les assertions\n",
+    "### Les assertions\n",
     "\n",
     "Tout comme **unittest**, **nosetests** comprend tout un tas d'outils pour faire des assertions. Ils se trouvent dans `nose.tools`. \n",
     "\n",
@@ -810,7 +810,7 @@
     }
    },
    "source": [
-    "## Initialisation et finalisation des tests\n",
+    "### Initialisation et finalisation des tests\n",
     "\n",
     "Il est possible d'exécuter du code en début et en fin de tests comme avec les fonctions `setUp` et `tearDown` de **unittest**."
    ]
@@ -823,7 +823,7 @@
     }
    },
    "source": [
-    "## Pour les packages de tests\n",
+    "### Pour les packages de tests\n",
     "\n",
     "On peut ajouter les fonctions d'initialisation et de finalisation dans le fichier `__init__.py`. \n",
     "\n",
@@ -840,7 +840,7 @@
     }
    },
    "source": [
-    "## Pour les modules de tests\n",
+    "### Pour les modules de tests\n",
     "\n",
     "Un module de tests est un module dont le nom satisfait *matchTest*. \n",
     "\n",
@@ -855,7 +855,7 @@
     }
    },
    "source": [
-    "## Pour les classes de tests\n",
+    "### Pour les classes de tests\n",
     "\n",
     "Une classe de tests est une classe dont le nom satisfait *matchTest*. Elle doit se trouver dans un module de tests.\n",
     "\n",
@@ -874,7 +874,7 @@
     }
    },
    "source": [
-    "## Pour les fonctions de tests\n",
+    "### Pour les fonctions de tests\n",
     "\n",
     "Une fonction de test est une fonction dont le nom satisfait *matchTest*. Elle doit se trouver dans un module de tests.\n",
     "\n",
@@ -927,7 +927,7 @@
     }
    },
    "source": [
-    "## Les attributs\n",
+    "### Les attributs\n",
     "\n",
     "Dans **nosetests**, il est possible de sélectionner une partie des tests en utilisant des attributs.\n",
     "\n",
@@ -1017,7 +1017,7 @@
     }
    },
    "source": [
-    "## Les tests de couverture\n",
+    "### Les tests de couverture\n",
     "\n",
     "Il est également possible avec **nosetests** de voir si nos tests passent bien sur l'ensemble de notre code.\n"
    ]
@@ -1045,6 +1045,124 @@
     "\n",
     "Continuons par des exercices pratiques, avec le [notebook 05_tests_TPs](05_tests_TPs.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "\n",
+       "h1, h2, h3, h4, h5 {\n",
+       "    font-family: 'Alegreya Sans', sans-serif;\n",
+       "}\n",
+       "\n",
+       "div.text_cell_render{\n",
+       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "    line-height: 135%;\n",
+       "    font-size: 120%;\n",
+       "    width:100%;/*600px;*/\n",
+       "    /*margin-left:auto;*/\n",
+       "    /*margin-right:auto;*/\n",
+       "}\n",
+       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
+       "\n",
+       "/* header colours and fonts */\n",
+       ".rendered_html h1 {\n",
+       "    color:#9A3334;\n",
+       "    /*margin-top: 0.5em;*/\n",
+       "    padding: 1em;\n",
+       "    display: block;\n",
+       "    font-size: 40px;\n",
+       "    text-align: center;\n",
+       "    border-top: 2px solid #9A3334;\n",
+       "    border-bottom: 2px solid #9A3334;\n",
+       "}\n",
+       "\n",
+       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
+       ".rendered_html h2 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-style: italic;\n",
+       "    font-weight: normal;\n",
+       "    font-size: 30px;\n",
+       "    /*text-align: center;*/\n",
+       "    border-bottom: 1px solid #9A3334;\n",
+       "}\n",
+       ".rendered_html h3 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-weight: normal;\n",
+       "    font-size: 25px;\n",
+       "    font-style: italic;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h4 {\n",
+       "    border: 2px solid #9A3334;\n",
+       "    border-radius: 25px;\n",
+       "    font-style: italic;\n",
+       "    height:5%;\n",
+       "    width:15%;\n",
+       "    padding:5px;\n",
+       "    text-align: center;\n",
+       "}\n",
+       "\n",
+       "div.prompt {\n",
+       "    display: None;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".ui-wrapper {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".video {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       ".rendered_html img {\n",
+       "    margin-top: 0em;\n",
+       "}\n",
+       "\n",
+       "div.input_area {\n",
+       "    border-radius: 10px;\n",
+       "}\n",
+       "\n",
+       "/*.reveal h1 {\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}*/\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# execute this part to modify the css style\n",
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
+   ]
   }
  ],
  "metadata": {
@@ -1064,7 +1182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
