--- a/python/session-2016-03-idf/4_outils/theorie/synope_outils_3_logging.ipynb
+++ b/python/session-2016-03-idf/4_outils/theorie/synope_outils_3_logging.ipynb
@@ -30,7 +30,7 @@
     }
    },
    "source": [
-    "# Pourquoi utiliser les logs\n",
+    "## Pourquoi utiliser les logs\n",
     "\n",
     "- suivre le bon fonctionnement d'un programme\n",
     "    + trouver plus facilement la source d'une erreur\n",
@@ -48,7 +48,7 @@
     }
    },
    "source": [
-    "# Le module logging de python (1/2)\n",
+    "## Le module logging de python (1/2)\n",
     "\n",
     "- fait parti de la bibliothèque standard de python\n",
     "- les logs peuvent être envoyés :\n",
@@ -73,7 +73,7 @@
     }
    },
    "source": [
-    "# Le module logging de python (2/2)\n",
+    "## Le module logging de python (2/2)\n",
     "\n",
     "La configuration du module peut-être faite de plusieurs manières\n",
     "+ en utilisant les méthodes de l'objet ```logging``` directement dans le code\n",
@@ -89,7 +89,7 @@
     }
    },
    "source": [
-    "# Configuration du module logging\n",
+    "## Configuration du module logging\n",
     "\n",
     "- la configuration de ce module n'est pas toujours facile car la documentation est compliqué\n",
     "- un modèle de configuration type a été défini par la communauté django\n",
@@ -178,7 +178,7 @@
     }
    },
    "source": [
-    "# Utilisation de l'objet logger\n",
+    "## Utilisation de l'objet logger\n",
     "\n",
     "Dans les fonctions, on peut ensuite utiliser cet object pour sauvegarder les logs\n",
     "\n",
@@ -196,6 +196,124 @@
     "entier = 10\n",
     "logger.debug(\"valeur de l'entier %d\", entier)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
+       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+       "\n",
+       "<style>\n",
+       "\n",
+       "h1, h2, h3, h4, h5 {\n",
+       "    font-family: 'Alegreya Sans', sans-serif;\n",
+       "}\n",
+       "\n",
+       "div.text_cell_render{\n",
+       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "    line-height: 135%;\n",
+       "    font-size: 120%;\n",
+       "    width:100%;/*600px;*/\n",
+       "    /*margin-left:auto;*/\n",
+       "    /*margin-right:auto;*/\n",
+       "}\n",
+       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
+       "\n",
+       "/* header colours and fonts */\n",
+       ".rendered_html h1 {\n",
+       "    color:#9A3334;\n",
+       "    /*margin-top: 0.5em;*/\n",
+       "    padding: 1em;\n",
+       "    display: block;\n",
+       "    font-size: 40px;\n",
+       "    text-align: center;\n",
+       "    border-top: 2px solid #9A3334;\n",
+       "    border-bottom: 2px solid #9A3334;\n",
+       "}\n",
+       "\n",
+       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
+       ".rendered_html h2 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-style: italic;\n",
+       "    font-weight: normal;\n",
+       "    font-size: 30px;\n",
+       "    /*text-align: center;*/\n",
+       "    border-bottom: 1px solid #9A3334;\n",
+       "}\n",
+       ".rendered_html h3 {\n",
+       "    color: #9A3334;\n",
+       "    /*font-family: Lora, sans-serif;*/\n",
+       "    font-weight: normal;\n",
+       "    font-size: 25px;\n",
+       "    font-style: italic;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h4 {\n",
+       "    border: 2px solid #9A3334;\n",
+       "    border-radius: 25px;\n",
+       "    font-style: italic;\n",
+       "    height:5%;\n",
+       "    width:15%;\n",
+       "    padding:5px;\n",
+       "    text-align: center;\n",
+       "}\n",
+       "\n",
+       "div.prompt {\n",
+       "    display: None;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".ui-wrapper {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       "/* center the images */\n",
+       ".video {\n",
+       "    margin-left: auto !important;\n",
+       "    margin-right: auto !important;\n",
+       "}\n",
+       "\n",
+       ".rendered_html img {\n",
+       "    margin-top: 0em;\n",
+       "}\n",
+       "\n",
+       "div.input_area {\n",
+       "    border-radius: 10px;\n",
+       "}\n",
+       "\n",
+       "/*.reveal h1 {\n",
+       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
+       "}*/\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# execute this part to modify the css style\n",
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
    ]
   }
  ],
@@ -216,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
