--- a/python/session-2016-03-idf/5_calcul/ellipsoides/enonce/synope_session_2016_03_idf-TP5.ipynb
+++ b/python/session-2016-03-idf/5_calcul/ellipsoides/enonce/synope_session_2016_03_idf-TP5.ipynb
@@ -256,7 +256,7 @@
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
-    "    styles = open(\"../../styles/custom.css\", \"r\").read()\n",
+    "    styles = open(\"../../../styles/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
     "css_styling()"
    ]
@@ -264,21 +264,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.3.5"
   }
  },
  "nbformat": 4,
