add TP 4 + fix titles + add creative commons text

--- a/python/session-2016-03-idf/1_fonctions/ellipsoides/enonce/synope_session_2016_03_idf-TP1.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/ellipsoides/enonce/synope_session_2016_03_idf-TP1.ipynb
@@ -19,12 +19,7 @@
     }
    },
    "source": [
-    "# Initiation à Python, printemps 2016, Ile-de-France\n",
-    "\n",
-    "Ensemble de formations organisées en coopération avec les réseaux LoOPS, PICo-DevLog,  \n",
-    "et le pôle formation du Service Mutualisé d’Ile-de-France du CNRS.\n",
-    "\n",
-    "<img src=\"img/python-logo-TM.png\" />"
+    "# Initiation à Python - TP 1 - vos premiers scripts"
    ]
   },
   {
@@ -35,48 +30,6 @@
     }
    },
    "source": [
-    "## Formateurs\n",
-    "\n",
-    "| Où |  Quand | Qui |\n",
-    "|----|--------|-----|\n",
-    "| Gif | 29-30-31 mars | David Chamont & Loic Gouarin  |\n",
-    "| Meudon | 6-7-8 avril | Dmitry Khvorostyanov & Marc-Antoine Drouin |\n",
-    "| Villejiuf | 11-12-13 mai | Dmitry Khvorostyanov & Christophe Gengembre |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Auteurs\n",
-    "\n",
-    "Vous trouverez à la fin de chaque notebook des informations sur les auteurs\n",
-    "historiques des modules, et les contributeurs ultérieurs. L'ensemble a été\n",
-    "initié dans le cadre du projet \"Notebooks Python\" du réseau Devlog, et\n",
-    "poursuivi dans le cadre du projet \"Synopé\", qui marque le passage de\n",
-    "IPython à Jupyter, et la volonté d'essayer d'autres langages (C++).\n",
-    "\n",
-    "* auteurs originaux : Nicolas Can (Min2Rien - DR18), Sékou Diakité (DevelopR6 - DR6),\n",
-    "Loïc Gouarin (LOOPs - DR4), Christophe Halgand (CEPAge - DR15), David Chamont (LOOPs - DR4).\n",
-    "* ajouts pour cette session : Loic Gouarin (calcul & ellipsoides), David Chamont (fonctions), Marc-Antoine Drouin (outils et bonnes pratiques), Christophe Gengembre (modules), Dmitry Khvorostyanov (ellipsoides).\n",
-    "\n",
-    "Les quizz ont été réalisés par Guillaume Harry, et inspirés par les quiz du MOOC Python porté par Arnaud Legout & Thierry Parmentelat (Inria)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Travaux pratiques 1: vos premières fonctions\n",
-    "\n",
     "Tout au long de cette formation, vous allez travailler sur l'élaboration d'un projet Python allant de sa forme la plus basique (création de fonction et manipulation du langage) à sa forme la plus aboutie (création d'un package permettant de redistribuer à la communauté son savoir-faire).\n",
     "\n",
     "Le fil rouge qui va nous occuper pendant ces trois jours est basé sur la construction de deux objets que nous ferons interagir par la suite:\n",
@@ -86,7 +39,7 @@
     "\n",
     "Nous allons commencer ce premier TP par la réalisation de fonctions simples permettant de vous familiariser avec le langage ainsi qu'avec les superellipsoïdes et les quaternions.\n",
     "\n",
-    "### Superellipse et superellipsoide\n",
+    "## Superellipse et superellipsoide\n",
     "\n",
     "L'équation d'une superellipse est donnée par la formule suivante pour $-\\pi \\leq \\theta \\leq \\pi$\n",
     "\n",
@@ -148,7 +101,7 @@
     "\n",
     "Faire en sorte que les fonctions *superellipse* et *superellipsoide* est des valeurs par défaut pour $r_x$, $r_y$, $r_z$, $m$, $m_1$ et $m_2$.\n",
     "\n",
-    "### Rotations\n",
+    "## Rotations, nombres complexes et quaternions\n",
     "\n",
     "Il existe différentes façons de programmer la roatation. La plus connue est certainement à l'aide d'une matrice. Nous allons voir ici une autre façon de faire en utilisant les nombres complexes pour la dimension 2 et les quaternions pour la dimension 3.\n",
     "\n",
