--- a/python/session-2016-03-idf/4_outils/ellipsoides/enonce/synope_session_2016_03_idf-TP4.ipynb
+++ b/python/session-2016-03-idf/4_outils/ellipsoides/enonce/synope_session_2016_03_idf-TP4.ipynb
@@ -2,104 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "source": [
-    "*Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Initiation à Python - TP 2 - packages et modules"
+    "Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vous allez créer ici votre premier package Python qui intègrera les fonctions réalisées lors du premier TP. Nous choisirons l'arborescence suivante\n",
+    "# Initiation Python - TP 4 - outils\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette séance de TP est laissée assez libre et vous propose de vous initier aux outils présentés pendant le cours.\n",
     "\n",
-    "<img src=\"figures/synope_tree.png\" />\n",
+    "#### Question 1\n",
     "\n",
-    "#### Quetion 1\n",
+    "Utilisez pyLint sur le package *pySynope*. Essayer de faire les modifications pour atteindre une note supérieure à 5/10.\n",
     "\n",
-    "Commencez par créer cette arborescence en mettant dans les fichiers *linspace.py*, *quaternion.py*, *superellipse.py*, *superellipsoid.py* et *utils.py* les fonctions crées lors de la première séance. Le fichier *utils.py* contiendra les fonctions $spe\\_cos$ et $spe\\_sin$.\n",
+    "#### Question 2\n",
     "\n",
-    "#### Quetion 2\n",
-    "\n",
-    "Ajoutez les fichiers *\\_\\_init\\_\\_.py* en les laissant vides pour le moment et écrivez le fichier *setup.py* permettant d'installer *pySynope*.\n",
-    "\n",
-    "Le *setup* devra contenir au moins les champs:\n",
-    "\n",
-    "- name,\n",
-    "- version,\n",
-    "- author,\n",
-    "- description,\n",
-    "- packages.\n",
+    "Ajoutez dans vos docstrings des tests unitaires et testez avec docstring.\n",
     "\n",
     "#### Question 3\n",
     "\n",
-    "Installez le package *pySynope*\n",
+    "Faites de même avec nosetests en ajoutant un répertoire *tests* à la racine du projet.\n",
     "\n",
     "#### Question 4\n",
     "\n",
-    "Créez le répertoire *demos* et mettez les deux scripts Python suivant\n",
-    "\n",
-    "- *superellipsoid.py*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "import pySynope\n",
-    "\n",
-    "print(pySynope.superellipse(10, 1, 1, 2))\n",
-    "print(pySynope.superellipsoid(10, 1, 1, 1, 2, 2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- *quaternion.py*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "import pySynope\n",
-    "import math\n",
-    "\n",
-    "print(pySynope.rotate_using_complex(math.pi/4, [1, 0]))  \n",
-    "print(pySynope.rotate_using_quaternion(math.pi/4, [0, 0, 1], [1, 0, 0]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testez ces scripts, puis modifiez les fichiers *\\_\\_init\\_\\_.py* pour que ces deux exemples fonctionnent."
+    "Faites un test de couverture en utilisant l'option *--with-coverage*."
    ]
   },
   {
