--- a/python/session-2016-03-idf/5_calcul/ellipsoides/enonce/synope_session_2016_03_idf-TP5.ipynb
+++ b/python/session-2016-03-idf/5_calcul/ellipsoides/enonce/synope_session_2016_03_idf-TP5.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - TP5: numpy et matplotlib"
+    "# Initiation Python - TP 5 - numpy et matplotlib"
    ]
   },
   {
