--- a/python/session-2016-03-idf/6_billard/notebook/ballPackage.ipynb
+++ b/python/session-2016-03-idf/6_billard/notebook/ballPackage.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ce notebook est distribué par Devlog sous licence Creative Commons - Attribution - Pas d’Utilisation Commerciale - Partage dans les Mêmes Conditions. La description complète de la license est disponible à l'adresse web http://creativecommons.org/licenses/by-nc-sa/4.0/."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Projet BallPack\n",
     "\n",
     "\n",
@@ -44,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le module `ballMod.py`\n",
+    "## Le module **ballMod.py**\n",
     "\n",
     "Une balle, qu'elle soit à vitesse constante, avec une force de gravité, ..., a toujours les mêmes attributs.\n",
     "\n",
@@ -171,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le module `color.py`\n",
+    "## Le module **color.py**\n",
     "\n",
     "Dans ce module, nous allons créer une classe `Color` qui prend en paramètre un fichier contenant des noms de couleurs et qui les stocke dans un attribut `colorNames` qui est de type `list`.\n",
     "\n",
@@ -206,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le script `tkgui.py`\n",
+    "## Le script **tkgui.py**\n",
     "\n",
     "#### Question 11\n",
     "\n",
@@ -221,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le module `save.py`\n",
+    "## Le module **save.py**\n",
     "\n",
     "Nous allons à présent faire en sorte de pouvoir sauvegarder et recharger un état au format CSV. On se servira du module [`csv`](https://docs.python.org/2/library/csv.html) qui est de base dans Python.\n",
     "\n",
@@ -276,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ajout d'une classe `UserBall`\n",
+    "## Ajout d'une classe **UserBall**\n",
     "\n",
     "Ajoutez une classe `UserBall` qui permet de déplacer une balle selon une fonction et ses paramètres donnés en paramètre de la fonction `move`. Puis testez. "
    ]
